Update API docs
- Add swagger annotations for fetching users, editing users, deleting users, admin user login, admin user logout
